# SparkEngine

./: .clang-format  CMakeLists.txt  readme.md
doc/: CMakeLists.txt  doxyfile.in
include/SparkEngine/Engine/: Engine.hpp
include/SparkEngine/Window/: Window.hpp
src/SparkEngine/Engine/: CMakeLists.txt  Engine.cpp
src/SparkEngine/Window/: CMakeLists.txt  Window.cpp  WindowImpl.cpp  WindowImpl.hpp
src/SparkEngine/Window/Win32/: WindowImplWin32.cpp  WindowImplWin32.hpp
